--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.zgtools.net/tatianae/identity-blockchain-app.git"
+    "url": "https://github.com/tatianajiselle/Identity-Blockchain-App.git"
   },
   "author": "",
   "license": "ISC",
